--- a/gb/nf3046.md
+++ b/gb/nf3046.md
@@ -35,6 +35,7 @@
 2020年，继前中共政治局常委、中央政法委书记周永康之后，现任中共政治局常委、中纪委书记赵乐.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月15日 11:04 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/13/n12685476.md#1" target="_blank">中国留学生：免遭报应 赶紧跟中共划清界限</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/13/n12685476.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/1910201838461973-600x400-150x120.jpg" align ="left"></a>新年伊始，中国民众纷纷在大纪元网站上声明退出中共的党、团、队组织（三退）。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月14日 9:10 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/10/n12678167.md#1" target="_blank">王友群：被举报到二十九国 傅政华难逃大审判</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/10/n12678167.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/fu-zhenghua-1-CFP413657043-600x400-1-2-150x120.jpg" align ="left"></a>近期，中共全国政协社会和法制委员会副主任傅政华，其迫害法轮功的恶行，被法轮功学员举报给29国政府，要求对傅政华及其家属依法予以制裁，包括拒发签证、冻结资产等。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 9:36 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12731829.md#1" target="_blank">三退声明精选（2021/02/03）</a><br></h3>我是一名事业单位的80后。我今天听说了抹兽印，保平安的事情，以前从来没有听说过，我认为这个是一个好事。现在的年轻人对传统文化中令人敬畏的力量都不太感兴趣了，加入共产党组织时发毒誓像喝水一样平常。但小的时候，我的父亲是一个气功爱好者，也爱给我摆一些关于气功的龙门阵，我知道科学所不能解释的很多现象，知道天意、天道是很可能真实不虚的事情。我本不想入党，但去年单位死.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月04日 11:07 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12726893.md#1" target="_blank">三退声明精选（2021/02/01）</a><br></h3>中共执政几十年，害死几千万人，不断作恶，腐败的香港政府依附中共去行恶，招致香港人的反送中，反中共，反恶法廿三条，反港区国安法等一系列抵抗暴权的社会运动，香港人是对抗邪恶魔鬼的最前线正义勇士，香港政府强迫所有香港公务员宣誓效忠其邪恶政权及拥护暴权基本法港区国安法，否则解除其公务员一职，失去饭碗，这种强迫宣誓的做法明显是想消灭一个对抗魔鬼的正义力量，其目的多么邪.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月02日 9:16 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/30/n12721869.md#1" target="_blank">三退声明精选（2021/01/29）</a><br></h3>最近有幸阅读了《九评共产党》一书。《九评》使我彻底认清了中共的邪恶本性——一个妄图毁灭人类的地地道道的邪教。本人在此严正声明：从即日起退出被其蒙蔽与欺骗而加入的中国共产党，同时退出儿时加入的“少年儿童队”（现称“少年先锋队”）及中学时期加入的“共青团”，彻底否定在加入这些组织时举手发过的要“为共产主义奋斗终身”，随时准备为中共牺牲一切的毒誓！作一个对得起祖先.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月30日 9:32 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12721487.md#1" target="_blank">王友群：毛泽东翻脸不认人 中监委高官被整死</a><br></h3>本文提到的中监委，全称是中共中央监察委员会，1949年时叫中共中央纪律检查委员会，1955年改名中监委。1966年文化大革命爆发时，中监委基本瘫痪。直到1978年12月，中纪委恢复重建。2018年，中共在中纪委之外，又成立了一个国家监察委员会，简称监察委。
@@ -62,6 +63,5 @@
 4.中国大陆的互联网是被封锁的，相当于是中国大陆里的互联网，而不是全球互联网，人们不能正常访问其它非中国大陆区域的网站，例如Youtube，Google等，需要翻墙才能访问其它非中国大陆的网站。
 5.在中国大陆，人权、个人隐私等合法权益得.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月12日 9:41 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/11/n12679756.md#1" target="_blank">三退声明精选（2021/01/10）</a><br></h3>我是一名生在大陆，长在大陆的人，今年24岁。从小受洗脑教育，从教育上讲，可以说是“根正苗红”，从小就活在共产党的“伟光正”之下。但不知道为什么，虽然一直都这样被洗脑，但对社会总是心生反感，认为国内很多做法让我觉得不舒服。上大学以后，更多的思想政治课程，变本加厉地洗脑，让我更不满。自从总加速师上台以后，全国急速左转，那种随处都能感受到的政治的压迫感让我受不了.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月11日 9:54 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/9/n12676924.md#1" target="_blank">三退声明精选（2020/01/08）</a><br></h3>工作中能遇到社会上各种各样的人，亲身感受到近几年环境的变化，每个阶层的人不论男女老幼都开始拜金，以貌取人，对待弱势乃至对待动物毫无同理心。原本的淳朴善良没了，取而代之的是互相猜忌，坑蒙拐骗，谁有心眼谁就能爬上去，不论是职场上还是官场上。中共的党文化就是这种现象的来源，为了官员自己的利益不择手段，连带小老百姓也牵涉其中。前年年底听到风声逃离武汉，中共的社区干部.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月09日 9:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yrsmsb310/djy/blob/master/gb/nf3046.md#1<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf3046.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrsmsb310/djy/blob/master/gb/nf3046.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf3046.htm">https://www.epochtimes.com/gb/nf3046.htm</a>    （国内需<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
